# translations-crm

./: .gitignore  API_REFACTORING.md  ARCHITECTURE.md  ASYNC_AND_SECURITY.md  BACKEND_INFRASTRUCTURE_FIXES.md  BASE_CLASSES_EXPLANATION.md  BUGFIXES_2026-01-22.md  CELERY_REDIS_SETUP.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  CRM_IMPLEMENTATION_STATUS.md  CSV_STRUCTURE_ANALYSIS.md  DEPLOYMENT_MIGRATIONS.md  DEPLOYMENT_PATHS.md  EMAIL_LISTENER_SETUP.md  FACEBOOK_APP_REVIEW_URLS.md  FACEBOOK_LOGIN_STATUS.md  FACEBOOK_META_DASHBOARD_SETUP.md  FACEBOOK_META_SETTINGS_QUICK.md  FACEBOOK_OAUTH_SETUP.md  FACEBOOK_SDK_INTEGRATION.md  FACEBOOK_WEBHOOK_URL.md  FEATURES.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_ORDER_FIELDS_UPDATE.md  FRONTEND_UPDATES_COMPLETED.md  GITHUB_SECRETS.md  HEALTH_CHECK_FIX.md  INPOST_IMPLEMENTATION_SUMMARY.md  INPOST_INTEGRATION.md  INPOST_QUICKSTART.md  INPOST_README.md  INPOST_ПРОЧИТАЙ_МЕНЕ_СПОЧАТКУ.md  INPOST_ШВИДКИЙ_СТАРТ.md  INSTAGRAM_OAUTH_SETUP.md  META_APP_REVIEW_URLS.md  META_REVIEW_LINKS.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_TELEGRAM_GROUPS.md  (+67 more)
.github/: MEDIA_SETUP.md  SETUP.md
app/: Dockerfile  README.md  README_UPDATE_ITEMS.md  crud.py  crud_user.py  db.py  docker-compose.yml  email_service.py  example_items_update.csv  import_menu_csv.py  init_db.sh  loyalty_service.py  main.py  main_refactored.py  menu_patch_generator.py  (+13 more)
app/18.09.25/roma_catering/: 03.05.24 кава брейк 40 осіб Аркадій -4.xlsx  28_03_24_Кава_пауза_35_осіб_Освіторія_Хаб_Даря.xlsx  excel_handlers.py  pyproject.toml  run.py  run.spec  Оновлена закупка 2024 (8).xlsx
(+612 files in other folders)
