[project]
package-mode = false
name = "roma-catering"
version = "0.1.0"
description = ""
authors = [
    {name = "ink404dot",email = "94466285+ink404dot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
